[gd_scene load_steps=4 format=2]

[ext_resource path="res://texture/cenarios/terra/spotplanting1.png" type="Texture" id=1]
[ext_resource path="res://scripts/mundo/mundoCama/spotPLant.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="spotPLant" type="Area2D" groups=["areaPlant"]]
z_index = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="spotTexture" type="Sprite" parent="."]
show_behind_parent = true
texture = ExtResource( 1 )

[node name="plantTexture" type="Sprite" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_spotPLant_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_spotPLant_mouse_exited"]
